--- a/gradle.properties
+++ b/gradle.properties
@@ -1,8 +1,8 @@
 org.gradle.jvmargs=-Xmx2G
 
 # Mod Info
-maven_group = com.example
-archives_base_name = modid
+maven_group = com.petermeansrock.minecraft.create.controllable
+archives_base_name = create-controllable-bridge
 mod_version = 0.0.1
 
 minecraft_version = 1.20.1
