--- a/gradle.properties
+++ b/gradle.properties
@@ -22,6 +22,10 @@ parchment_version = 2023.09.03
 # https://modrinth.com/mod/create-fabric/versions
 create_version = 0.5.1-f-build.1335+mc1.20.1
 
+# Controllable
+# https://mrcrayfish.com/mods/controllable
+controllable_version = 0.20.2
+
 # Development QOL
 # Create supports all 3 recipe viewers: JEI, REI, and EMI. This decides which is enabled at runtime.
 # set to disabled to have none of them.
