--- a/gradle.properties
+++ b/gradle.properties
@@ -24,7 +24,8 @@ create_version = 0.5.1-f-build.1335+mc1.20.1
 
 # Controllable
 # https://mrcrayfish.com/mods/controllable
-controllable_version = 0.20.2
+controllable_fabric_project_id = 851657
+controllable_fabric_file_id = 4592466
 
 # Development QOL
 # Create supports all 3 recipe viewers: JEI, REI, and EMI. This decides which is enabled at runtime.
