build: add Framework dependency

--- a/gradle.properties
+++ b/gradle.properties
@@ -27,6 +27,11 @@ create_version = 0.5.1-f-build.1335+mc1.20.1
 controllable_fabric_project_id = 851657
 controllable_fabric_file_id = 4592466
 
+# Framework
+# https://mrcrayfish.com/mods/framework
+framework_fabric_project_id = 667391
+framework_fabric_file_id = 4718252
+
 # Development QOL
 # Create supports all 3 recipe viewers: JEI, REI, and EMI. This decides which is enabled at runtime.
 # set to disabled to have none of them.
