--- a/build.gradle
+++ b/build.gradle
@@ -78,6 +78,9 @@ dependencies {
 
 	// Controllable mod dependency
 	modImplementation("curse.maven:controllable-${controllable_fabric_project_id}:${controllable_fabric_file_id}")
+
+	// Framework mod dependency
+	modImplementation("curse.maven:framework-${framework_fabric_project_id}:${framework_fabric_file_id}")
 }
 
 processResources {
